--- a/Insiemi/02-rappresentazione-degli-insiemi.tex
+++ b/Insiemi/02-rappresentazione-degli-insiemi.tex
@@ -1,4 +1,5 @@
 \section{Rappresentazione degli insiemi}
+
 \subsection{Diagrammi di Eulero-Venn}
 Un metodo di rappresentazione grafico estremamente facile da capire ma limitato se si tratta di dover rappresentare insiemi grandi.
 Molto semplicemente gli elementi dentro il cerchio appartengono all'insieme. \\
@@ -12,7 +13,7 @@ Anche questo metodo risulta scomodo quando all'interno dell'insieme vi è un gra
 di elementi o addirittura c'è un numero infinito di elementi da elencare.
 \begin{align*}
     &A = \{1, 2, 3\} \\
-    &B = \{1, 2, 3, ..., 100\}
+    &\mathbb{N} = \{1, 2, 3, ...\}
 \end{align*}
 \subsection{Rappresentazione intensionale}
 Consiste nel formulare una proprietà caratteristica \textit{P} che distingue precisamente gli elementi dell'insieme S = \{x : \textit{P}\}. S è l'insieme di tutti e soli gli elementi per i quali la proprietà \textit{P} è vera. \\
