--- a/Insiemi/main.tex
+++ b/Insiemi/main.tex
@@ -3,3 +3,4 @@
 \input Insiemi/01-cos-e-un-insieme.tex
 \input Insiemi/02-rappresentazione-degli-insiemi.tex
 \input Insiemi/03-sottoinsiemi-e-insieme-potenza.tex
+\input Insiemi/04-operazioni-fra-insiemi.tex
