--- a/Insiemi/01-cos-e-un-insieme.tex
+++ b/Insiemi/01-cos-e-un-insieme.tex
@@ -1,7 +1,7 @@
 \section{Cos'è un insieme}
 
 Un \textbf{insieme} è una collezione non ordinata di oggetti distinti e ben definiti detti elementi dell'insieme.
-Per convenzione gli insiemi sono denominati con lettere maiuscole e sono delimitati da parentesi graffe, gli elementi sono indicati con lettere minuscole. \\
+Per convenzione gli insiemi sono denominati con una lettera maiuscola e sono delimitati da parentesi graffe, gli elementi sono indicati con una lettera minuscola. \\
 Per ogni oggetto (anche un insieme) esistente è possibile chiedersi se esso \textbf{appartiene} o meno ad un determinato insieme. \\
 Se un elemento appartiene ad A si scrive:
 \begin{center}
@@ -12,12 +12,12 @@ Se un elemento \textit{b} non appartiene ad A si scrive:
     \textit{b} $\notin$ A
 \end{center}
 L' \textbf{insieme universo} è l'insieme indicato con U che contiene tutti gli tutti gli elementi e tutti gli insiemi esistenti, compreso quindi anche se stesso. \\
-L' \textbf{insieme vuoto}, ovvero l'insieme senza elementi viene denotato con $\phi$. \\
+L' \textbf{insieme vuoto}, ovvero l'insieme senza elementi, viene denotato con $\phi$. \\
 Per ogni oggetto \textit{x}, esiste un insieme \{x\} che viene detto \textbf{singoletto}.
 \begin{align*}
     &A = \{1, 2, 3\} \\
     &B = \{3, 2, 1\} \\
     &C = \{1, 1, 2, 3\}
 \end{align*}
-In questo caso abbiamo che A = B = C dato che ordine e numerosità degli elementi non contano, come detto sopra. \\
-\framebox{\{$\phi$\} non è l'insieme vuoto ma è un insieme, un singoletto, contenente l'insieme vuoto.}
+In questo caso abbiamo che A = B = C, dato che ordine e numerosità degli elementi non contano, come detto sopra. \\
+\framebox{\{$\phi$\} non è l'insieme vuoto ma è un insieme (un singoletto) contenente l'insieme vuoto.}
