--- a/Insiemi/03-sottoinsiemi-e-insieme-potenza.tex
+++ b/Insiemi/03-sottoinsiemi-e-insieme-potenza.tex
@@ -38,8 +38,8 @@ Possiamo dire che per $\subseteq$ valgono le seguenti proprietà:
     \item Riflessività: S $\subseteq$ S $\forall$S
     \item Transitività: se A $\subseteq$ B e B $\subseteq$ C allora A $\subseteq$ C
 \end{itemize}
-Se dati due insiemi C e D succede che C $\subseteq$ D e D $\subseteq$ C
-allora C è un \textbf{sottinsieme improprio} di D. (C = D).\\
+Se dati due insiemi C e D succede che C $\subseteq$ D e D $\subseteq$ C,
+allora C è detto \textbf{sottinsieme improprio} di D. (C = D).\\
 Ogni insieme (tranne l'insieme vuoto come vedremo a breve) accetta 2 sottoinsiemi impropri:
 \begin{itemize}
     \item L'insieme stesso
