--- a/main.tex
+++ b/main.tex
@@ -19,11 +19,10 @@
 
 \chapter*{Introduzione}
 
-Perchè studiare insiemi? la teoria degli insiemi è un fondamento della matematica,
-che a sua volta è un fondamento dell'informatica. \\
-Concretamente parlando il campo dell'informatica più influenzato dall'insiemistica
+Perchè studiare insiemi? La teoria degli insiemi è un fondamento della matematica e l'informatica deriva strettamente da essa \\
+Concretamente parlando, il campo dell'informatica più influenzato dall'insiemistica
 a mio avviso è quello delle \textbf{basi di dati}. \\
-Ad esempio con una SELECT * FROM che coinvolge più di una tabella verrà fatto il \textbf{prodotto cartesiano} tra le tuple delle tabelle del database. \\
+Ad esempio se una SELECT * FROM coinvolge più di una tabella verrà fatto il \textbf{prodotto cartesiano} tra le tuple\footnote{una tupla è un generico elemento di una relazione con attributi in un database relazionale.} delle tabelle del database. \\
 Sempre nei database relazionali sono essenziali le operazioni di \textbf{unione}, \textbf{intersezione} (inner JOIN), di \textbf{differenza} e così via.
 
 \input Insiemi/main.tex
