--- a/Insiemi/main.tex
+++ b/Insiemi/main.tex
@@ -4,3 +4,4 @@
 \input Insiemi/02-rappresentazione-degli-insiemi.tex
 \input Insiemi/03-sottoinsiemi-e-insieme-potenza.tex
 \input Insiemi/04-operazioni-fra-insiemi.tex
+\input Insiemi/05-leggi-di-de-morgan.tex
